# SFML_Game

./: .clang-format  CMakeLists.txt  bullet.cpp  notes.md
src/: bullet.cpp  bullet.hpp  bullets.cpp  bullets.hpp  collisionSystem.cpp  collisionSystem.hpp  enemy.cpp  enemy.hpp  entity.cpp  entity.hpp  level.cpp  level.hpp  main.cpp  player.cpp  player.hpp  utilities.hpp
